--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
           <p class="profile-tag">Verified Graduate</p>
         </div>
       </header>
-      <article class="bold">
+      <p class="bold">
         I received a job offer mid-course, and the subjects I learned were current, if not more so, 
         in the company I joined. I honestly feel I got every penny’s worth.
-      </article>
-      <article class="quotet">
+      </p>
+      <p class="quotet">
       “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
         transition and have heard some people who had an amazing experience here. I signed up 
         for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
         The next 12 weeks was the best - and most grueling - time of my life. Since completing 
         the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-      </article>
+      </p>
       <img src="images/bg-pattern-quotation.svg" alt="" class="quotation-img">
     </div>
     <div class="container2 container">
@@ -40,13 +40,13 @@
           <p class="profile-tag">Verified Graduate</p>
         </div>
       </header>
-      <article class="bold">
+      <p class="bold">
         The team was very supportive and kept me motivated
-      </article>
-      <article class="quotet">
+      </p>
+      <p class="quotet">
         “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
         for a big company. This was one of the best investments I’ve made in myself. ”
-      </article>
+      </p>
     </div>
     <div class="container3 container">
       <header>
@@ -56,10 +56,10 @@
           <p class="profile-tag">Verified Graduate</p>
         </div>
       </header>
-      <article class="bold">
+      <p class="bold">
         Such a life-changing experience. Highly recommended!
-      </article>
-      <article class="quotet">
+      </p>
+      <p class="quotet">
         “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
   professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
   student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
@@ -69,7 +69,7 @@
   experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
   100% recommend! ”
 
-      </article>
+      </p>
     </div>
     <div class="container4 container">
       <header>
@@ -79,13 +79,13 @@
           <p class="profile-tag">Verified Graduate</p>
         </div>
       </header>
-      <article class="bold">
+      <p class="bold">
         An overall wonderful and rewarding experience
-      </article>
-      <article class="quotet">
+      </p>
+      <p class="quotet">
         “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
   while doing something I love. ”
-      </article>
+      </p>
     </div>
     <div class="container5 container">
       <header>
@@ -95,16 +95,16 @@
           <p class="profile-tag">Verified Graduate</p>
         </div>
       </header>
-      <article class="bold">
+      <p class="bold">
         Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
   learning from their experiences was easy.
-      </article>
-      <article class="quotet">
+      </p>
+      <p class="quotet">
         “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
   gave me the confidence necessary to be able to go out in the world and present myself as a capable 
   junior developer. The standard is above the rest. You will get the personal attention you need from 
   an incredible community of smart and amazing people. ”
-      </article>
+      </p>
     </div>
   </main>
   <footer class="attribution">
